syntax = "proto3";

import "common.proto";

package json_ipc;

message ValuesSequence {
	message BinaryValue {
		bytes arr = 1;
		repeated string obj_location = 2;
	}
	message TransferredObj {
		repeated string obj_location = 1;
		common.ObjectReference obj_ref = 2;
	}
	message Value {
		string json = 1;
		repeated BinaryValue binary_in_json = 2;
		repeated TransferredObj transferred_in_json = 3;
		BinaryValue arr = 4;
		TransferredObj transferred = 5;
	}
	repeated Value values = 1;
}
